--- a/files/style.css
+++ b/files/style.css
@@ -64,18 +64,17 @@ a {
     padding: 50px;
     width: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .app {
-    height: 100vh !important;
+    height: 100% !important;
     display: flex !important;
     flex-direction: column !important;
     align-items: center !important;
     justify-content: space-between !important;
-    width: 70%;
+    width: 80%;
     margin: auto;
 }
 
@@ -88,7 +87,6 @@ a {
     padding: 50px;
     width: 100%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -301,6 +299,10 @@ select {
     padding: 0 !important;
 }
 
+.adj {
+    width: 80%;
+}
+
 @media(max-width:900px) {
     #w1 {
         display: none;
@@ -328,6 +330,10 @@ select {
         margin-top: 10px;
         width: 129px;
         display: block;
+    }
+
+    .adj {
+        width: 100%;
     }
 
     .info_text {
